Updating source in all handlebar files.

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,25 @@
   <div class="card-header">
   </div>
   <form id="login-form" class="card-body">
+      
+      <h2 class="login-title">Sign Up</h1>
+      
+      <div class="form-group">
+        <label for="username-login">Username:</label>
+        <input class="form-input" type="text" id="username-login" />
+      </div>
 
+      <div class="form-group">
+        <label for="password-login">Password:</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Sign Up</button>
+      </div>
+
+      <h3 class="btn-message">Login instead</h1>
   </form>
 </div>
 
-<script src="/js/login.js"></script>
+<script src="../public/js/logout.js"></script>
