--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,26 +11,27 @@
 </head>
 
 <body class="flex-column min-100-vh">
-  <nav class="navbar">
-    <ul class="flex-row">
-      <li class="li-inline nav-item"><a href="/">Home</a></li>
-      <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-      <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
-    </ul>
-  </nav>
-  <header class="hero">
+  {{!-- <header class="hero">
+    <nav class="navbar">
+      <ul class="flex-row">
+        <li class="li-inline nav-item"><a href="/">Home</a></li>
+        <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
+        <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+      </ul>
+    </nav>
     <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
-  </header>
+  </header> --}}
 
   <main class="col-auto">
     {{{body}}}
   </main>
 
   <footer class="footer flex-row justify-center">
-    <a href="/dashboard/new">➕ New Post</a>
+    {{!-- <a href="/dashboard/new">➕ New Post</a> --}}
+    <button class="btn-post" href="/dashboard/new">➕ New Post</button>
   </footer>
 </body>
 
-<script src="../../public/js/logout.js"></script>
+<script src="../public/js/logout.js"></script>
 
 </html>
