--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,21 +16,31 @@
       <ul>
         <li class="li-inline nav-item"><a href="/">Home</a></li>
         <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-        <li class="li-inline nav-item"><a href="/login">Login</a></li>
+        {{#if loggedIn}}
         <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+        {{else}}
+        <li class="li-inline nav-item"><a href="/login">Login</a></li>
+        {{/if}}                
       </ul>
     </nav>
-    <h1 class="app-title">The Tech Blog</h1>
+    {{#if loggedIn}}
+      {{!-- <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1> --}}
+      <h1 class="app-title">Your Dashboard</h1>
+    {{else}}
+      <h1 class="app-title">The Tech Blog</h1>
+    {{/if}}
   </header>
 
   <main class="col-auto">
     {{{body}}}
   </main>
 
+  {{#if loggedIn}}
+  <script src="../../public/js/logout.js"></script>
+  {{/if}}
   <footer class="flex-row justify-center">
     &copy; The Tech Blog Folks
   </footer>
 </body>
 
 </html>
-<script src="../../public/js/logout.js"></script>
