Login is working

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="flex-column min-100-vh">
+<body class="flex-column min-100-vh form-content"></body>
   {{!-- <header class="hero">
     <nav class="navbar">
       <ul class="flex-row">
@@ -28,7 +28,7 @@
 
   <footer class="footer flex-row justify-center">
     {{!-- <a href="/dashboard/new">➕ New Post</a> --}}
-    <button class="btn-post" href="/dashboard/new">➕ New Post</button>
+    <a type="submit" class="btn-post" href="/dashboard/new">➕ New Post</a>
   </footer>
 </body>
 
