--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,13 +166,12 @@ section {
 }
 
 .btn-post {
-  width: auto;
+  width: 130px;
   color: lightgrey;
   padding: 8px;
   padding-left: 18px;
   padding-right: 18px;
   border-radius: .3rem;
-  border-width: 0px;
   border-color: var(--title-color);
   background-color: var(--title-color);
   text-decoration: none;
