--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,8 @@
         <li class="li-inline nav-item"><a href="/">Home</a></li>
         <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
         {{#if loggedIn}}
-        <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
+        {{!-- <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li> --}}
+        <li class="li-inline nav-item"><a href="#" id="logout">Logout</a></li>
         {{else}}
         <li class="li-inline nav-item"><a href="/login">Login</a></li>
         {{/if}}                
@@ -37,6 +38,8 @@
 
   {{#if loggedIn}}
   <script src="../../public/js/logout.js"></script>
+  {{else}}
+  <script src="../../public/js/login.js"></script>
   {{/if}}
   <footer class="flex-row justify-center">
     &copy; The Tech Blog Folks
